<resources>
    <string name="app_name">FnordProjectSEG2105</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="login">Login</string>
    <string name="new_user_click_here_to_register">New User? Click here to register</string>
    <string name="choose_a_user_name">Choose a user name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="choose_a_password">Choose a password</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="register">Register</string>
    <string name="already_registered_sign_in">Already registered? Sign In</string>
    <string name="please_register_below">Please register below</string>
    <string name="homeowner">Homeowner</string>
    <string name="service_provider">Service Provider</string>
    <string name="admin">Admin</string>
</resources>
